[package]
name = "weatherapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.9.6"
serde_json = "1.0.114"
geolocation = "0.2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["default", "image"] }